--- a/_posts/2021-12-12-pattern.markdown
+++ b/_posts/2021-12-12-pattern.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Different patterns using activation map
+title:  Generating different patterns using kernel functions 
 project timeline: Sept'21-Mar'22
 # description: The goal of the project is to enable faster and more precise eye gaze direction estimation in VR/AR/MR devices by exploiting the deflectometry information provided from the reflection of the screen pattern on the specular surface of the eye 
 img: att.png # Add image post (optional)
