made minor changes

--- a/_posts/2022-03-05-kernel.markdown
+++ b/_posts/2022-03-05-kernel.markdown
@@ -99,14 +99,14 @@ From various experiments we concluded the following:
 2. The frequency might not be the exact property that is associated with accuracy.
 
 
-We test various hypothesis on the properties of patterns that may affect the accuracy, and in the process we aim to find the optimal
+We tested our hypothesis on the properties of patterns that may affect the accuracy, and in the process we aim to find the optimal
 the pattern that yields the lowest error.
 In this process I focused on using algorithms to find the optimal pattern in two steps:
-1. To perform a course-level optimization to determine the shape of the function. This was achieved by using the genetic algorithm (which is mentioned in a different post) which eliminated some of the functions from the pool of hypothetical functions formed using a fitness function.
-2. To perform a fine-level optimization to fine-tune the constants. This was achieved by gradient descent optimization on L2 loss which was calculated on gazing direction values(azimuthal and elevation angle).
+1. To perform a course-level optimization whch helped to determine the shape of the function. This was achieved by using the genetic algorithm (Reference:"Function search/generation using Genetic algorithm") which eliminated some of the functions from the pool of hypothetical functions, using a fitness function.
+2. To perform a fine-level optimization to fine-tune the constant values. This was achieved by gradient descent optimization on L2 loss which was calculated on gazing direction values(azimuthal and elevation angle).
 
 ## Radial convolution
-Different filters are applied to different pixels based on the radial distance from the center. Convolution was implemented from scratch because all the library based convolution method is based on FFT which applies the kenel to the entire image uniformly.
+Different filters are applied to different pixels based on the radial distance from the center. Convolution was implemented from scratch because nearly all the library based convolution method is based on FFT which applies the kenel to the entire image uniformly.
 
 ![approach](../assets/img/final.gif){: width="600" }
 ![my-eye](../assets/img/my-eye.png){: width="190" }
