--- a/_posts/2021-12-12-pattern.markdown
+++ b/_posts/2021-12-12-pattern.markdown
@@ -8,17 +8,18 @@ tags: [ Kernel,activation map ] # add tag
 ---
 
 ## Motivation 
-As mentioned in my post on "Deep Learning-Based Eye Gaze Estimation using Deflectometry Information in VR/AR/MR Headsets" we utilize learning-based and an inverse rendering-based approaches to more accurately infer the eye gaze direction from the deformation of the reflected pattern on the eye surface.
+As mentioned in my post on "Deep Learning-Based Eye Gaze Estimation using Deflectometry Information in VR/AR/MR Headsets" we utilize learning-based and inverse rendering-based approaches to more accurately infer the eye gaze direction from the deformation of the reflected pattern on the eye surface.
 
 ## Pattern selection 
-We started with low frequency patterns and used a homogenous white image.We varied the patterns to test whether the
-accuracy increases for the high frequency patterns as opposed to the low frequency patterns. For the high frequency pattern, we use a sinusoidal pattern.
-   To test other forms of patterns I used kernel functions to generate patterns
+We started with low frequency patterns and used a homogenous white image. We varied the patterns to test the hypothesis that whether the 
+accuracy increases for the high frequency patterns as opposed to the low frequency patterns(For the high frequency pattern, we use a sinusoidal pattern).
+
+To improve performance, I generated more varied patterns. One of the method that I used to generate patterns was using kernel functions. The advantage was that I could produce many different patterns simply by changing few parameters.
 
 ## Kernel
 A kernel is essentially a fixed size array of numerical coefficients along with an anchor point in that array, which is typically located at the center.
-
-In order to be a valid kernel function the resulting kernel matrix  should be positive definite . Which implies that the matrix should be symmetric. Being positive definite also means that the kernel matrix is invertible .
+In order to be a valid kernel function the resulting kernel matrix should be positive definite which implies that the matrix should be symmetric.
+Being positive definite also means that the kernel matrix is invertible .
 
 
 ### Exponentiated quadratic kernel
@@ -46,7 +47,8 @@ The following figure shows samples from the rational quadratic kernel together w
 
 The periodic kernel allows us to model periodic functions .
 
-The following figure shows samples from the periodic kernel together with a visual representation of its covariance matrix. The amplitude 
+The following figure shows samples from the periodic kernel together with a visual representation of its covariance matrix.
+
 ![f3](../assets/img/f3.png){: width="300" }
 
 
@@ -63,11 +65,14 @@ The local periodic kernel is a multiplication of the periodic kernel with the ex
 
 
 ## Heat Map and activation Map for analysis 
-To evaluate the patterns, I first reflected all the patterns on the eye model using blender. I used activation map to understand which part of the image(reflected pattern on the eye surface) contributes more in providing the value of gaze direction.This helped us to realized that "effect of aliasing" which hurts the accuracy of the gaze direction.The activation map test was performed on all the pattern with each pattern being trained on dataset with 10800 images.The experiment showed that to improve the gazing direction we need to consider the undersampling situation happening at the boundary of the cornea and sclera because of the abrupt change in curvature.
+To evaluate the patterns, I first reflected all the patterns on the eye model using blender. I used activation map to understand which part of the image(reflected pattern on the eye surface) contributes more in providing the resulting value of gaze direction.(caclulation of gaze directions is mentioned in "Deep Learning-Based Eye Gaze Estimation using Deflectometry Information in VR/AR/MR Headsets" post).
 
 ![a1](../assets/img/activ1.png){: width="200" }
 ![a2](../assets/img/act3.png){: width="300" }
 ![a3](../assets/img/act2.png){: width="350" }
+
+
+The activation map test was performed on all the pattern with each pattern being trained on dataset with 10800 images. The experiment showed that in order to improve the gazing direction we need to consider the undersampling situation happening at the boundary of the cornea and sclera because of the abrupt change in curvature.This helped us to draw conclusion that "effect of aliasing" hurts the accuracy of the gaze direction.
 
 
 [CODE](https://github.com/ashleetiw/pattern-generation)
